--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top center">
+            <header class="header">
+            <h1 class="header__name" >Добро пожаловать на мой сайт !</h1>
+            <p class="header__text" >Вам предстоит пройти несколько увлекательных игр. Если готов нажимай поехали и приступай</p>
+            </header>
+    </section>
+    <section class="games center">
+        <div class="games__item games__item_1">Игра 1</div>
+        <div class="games__item games__item_2">Игра 2</div>
+        <div class="games__item games__item_3">Игра 3</div>
+    </section>
 </body>
 </html>
