редактировала домашнее задание1

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </header>
     </section>
     <section class="games center">
-        <div class="games__item games__item_1">Игра 1</div>
-        <div class="games__item games__item_2">Игра 2</div>
-        <div class="games__item games__item_3">Игра 3</div>
+        <a href="#" class="games__item games__item_1">Игра 1</a>
+        <a href="#" class="games__item games__item_2">Игра 2</a>
+        <a href="#" class="games__item games__item_3">Игра 3</a>
     </section>
 </body>
 </html>
